<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">Mobile Net Connect</string>
<string name="app_url">https://github.com/georgehdd/PrivateWifiConnect/releases</string>



<string name="pref_application_settings_category">Application settings</string>
<string name="pref_application_settings_category_key">applicationSettings</string>
<string name="pref_connection_settings_category">Connection settings</string>
<string name="pref_connection_settings_category_key">connectionSettings</string>
<string name="pref_additional_settings_category">Additional settings</string>
<string name="pref_additional_settings_category_key">additionalSettings</string>

<string name="pref_settings_run_as_service">Run as a service</string>
<string name="pref_settings_run_as_service_summary">Run in the background and connect to Mobile Net automatically</string>
<string name="pref_settings_run_as_service_key">runAsService</string>

<string name="pref_settings_show_icon">Show icon</string>
<string name="pref_settings_show_icon_summary">Show icon in task bar</string>
<string name="pref_settings_show_icon_key">showIcon</string>

<string name="pref_settings_start_at_boot">Start on boot</string>
<string name="pref_settings_start_at_boot_summary">Start the application at boot</string>
<string name="pref_settings_start_at_boot_key">startAtBoot</string>

<string name="pref_settings_location">Location</string>
<string name="pref_settings_location_summary">Choose your location</string>
<string name="pref_settings_location_key">location</string>
<string name="pref_settings_location_dialog_title">Location</string>

<string name="pref_connection_custom_settings_host_name">Hostname</string>
<string name="pref_connection_custom_settings_host_name_summary">Choose the hostname to use in the connection</string>
<string name="pref_connection_custom_settings_host_name_key">hostName</string>
<string name="pref_connection_custom_settings_host_name_dialog_title">Select a hostname</string>

<string name="pref_settings_location_custom_settings">Custom settings</string>
<string name="pref_settings_location_custom_settings_summary">To enable this, choose custom settings from the Location settings menu</string>
<string name="pref_settings_location_custom_settings_key">locationCustomSettings</string>

<string name="pref_settings_enable_connection_sound">Enable sound</string>
<string name="pref_settings_enable_connection_sound_summary">Enable notification sound on connection</string>
<string name="pref_settings_enable_connection_sound_key">enableConnectSound</string>

<string name="pref_settings_ringtone">Select ringtone</string>
<string name="pref_settings_ringtone_summary">Choose notification ringtone</string>
<string name="pref_settings_ringtone_key">notificationRingtone</string>

<string name="pref_settings_vibrate">Vibrate</string>
<string name="pref_settings_vibrate_summary">Vibrate on connection</string>
<string name="pref_settings_vibrate_key">notificationVibrate</string>


<string name="notif_service_still_running_summary">Connected to a familiar Wifi</string>
<string name="shared_settings_file_name">WifiConnectSharedSettings</string>

<string name="app_about_summary">
    Developed by David Agrest, Slava Gorelik and George Haddad.   
</string>
<string name="app_about_credits">
    Used libraries:\n
    ActionBarSherlock\n http://actionbarsherlock.com\n\n
    Android AppMsg\n https://github.com/johnkil/Android-AppMsg\n\n
</string>
<string name="user_name">Username</string>
<string name="enter_username">Enter your username</string>
<string name="password">Password</string>
<string name="enter_password">Enter your password</string>
<string name="connect">Connect</string>
<string name="wifi_ssid">Wifi name</string>
<string name="select_wifi">Select your wifi</string>
<string name="show_password">Show password</string>
<string name="ok">OK</string>
<string name="cancel">Cancel</string>
<string name="pick_a_network">Pick a network</string>
<string name="wifi_id">Wifi id</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="wifi_enable_question">Wifi is disabled. Do you wish to enable it ?</string>
<string name="wifi_enable_error">Unable to turn on Wifi on your device.\nPlease manually enable Wifi and try again.</string>
<string name="connect_description">- press to connect to wifi -</string>
<string name="downloading">Downloading&#8230;</string>
<string name="new_version_update_question">Newer version available.\nDo you wish to update ?</string>
<string name="download_starting">Download starting&#8230;</string>
<string name="connect_success">Successfully connected.</string>
<string name="connecting">Connecting&#8230;</string>
<string name="connect_fail">Connection failed.</string>
<string name="unknown_wifi">Unknown Wifi. Unable to connect.</string>
<string name="already_connected">Already connected.</string>
<string name="wifi_disabled">Wifi disabled. Enable Wifi to connect.</string>
<string name="credentials_not_found">No credentials found. Configure credentials first.</string>
<string name="share_app_text">Hey! you can download the %1$s app by visiting %2$s</string>
<string name="share_using">Share using</string>
<string name="logo">Application Logo</string>
<string name="save">Save</string>
<string name="saved_data">WIFI data saved</string>
<string name="save_failed_ssid_missing">Saving failed, WIFI data missing</string>
<string name="save_failed_username_missing">Saving failed, username missing</string>
<string name="save_failed_password_missing">Saving failed, password missing</string>

<array name="location_text">
	<item>@string/pref_settings_location_custom_text</item>
	<item>@string/brazil</item>
	<item>@string/canada</item>
	<item>@string/germany</item>
	<item>@string/israel</item>
</array>
<string-array name="location_id">
	<item>@string/pref_settings_location_custom_id</item>
	<item>@string/brazil_code</item>
	<item>@string/canada_code</item>
	<item>@string/germany_code</item>
	<item>@string/israel_code</item>
</string-array>
<string name="pref_settings_location_default_value">@string/germany_code</string>
<string name="pref_settings_location_custom_text">Custom settings</string>
<string name="pref_settings_location_custom_id">CUSTOM</string>


<string name="host_name_aruba_networks_txt">ArubaNetworks.com</string>
<string name="host_name_aruba_networks">securelogin.arubanetworks.com</string>
<string name="host_name_sap_txt">SAP.com</string>
<string name="host_name_sap">wlan.sap.com</string>

<array name="host_name_text">
	<item>@string/host_name_aruba_networks_txt</item>
	<item>@string/host_name_sap_txt</item>
</array>
<string-array name="host_name_value">
	<item>@string/host_name_aruba_networks</item>
	<item>@string/host_name_sap</item>
</string-array>

<string name="pref_settings_host_name_default_value">@string/host_name_sap</string>

</resources>
