<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			style="@style/Dialog.Main" >
               
    <EditText
        android:id="@+id/password_input"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:password="true" />
        
    <CheckBox android:id="@+id/show_password_checkbox"
        android:text="@string/show_password"
        style="@style/Dialog.Text"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:checked="false" />
        
    <LinearLayout	android:orientation="horizontal"
    				android:layout_height="wrap_content"
    				android:layout_width="fill_parent" >
    	<Button android:id="@+id/ok_button"
    			android:text="@string/ok"
    			style="@style/Dialog.Button" />
    	<Button android:id="@+id/cancel_button"
    			android:text="@string/cancel"
    			style="@style/Dialog.Button" />
    </LinearLayout>
    
  
</LinearLayout>
