<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/mainview" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"> 
		
  <!-- Main Container -->
	<LinearLayout style="@style/Main" >

	
	<!-- Network Username -->			
		<RelativeLayout  android:id="@+id/user_name_entry" 
						style="@style/Entry">
		
		    <LinearLayout
		    android:orientation="vertical" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true" >	
				
	            <TextView
	            	style="@style/Title"
			    	android:id="@+id/user_name_text"
			        android:text="@string/user_name"
			        />
					
	            <TextView
	            	style="@style/Summary"
			    	android:id="@+id/user_name_value"
			        android:text=""
			        />
			
			</LinearLayout>
			
			<ImageView style="@style/MenuItemImage.More" />
			
		</RelativeLayout >
  		
  		
  	<!-- Seperator -->
		<LinearLayout style="@style/Seperator" />

	<!-- Network Password -->
		<RelativeLayout  android:id="@+id/password_entry" 
						style="@style/Entry">
		
		    <LinearLayout
		    android:orientation="vertical" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true" >	
				
	            <TextView
	            	style="@style/Title"
			    	android:id="@+id/password_text"
			        android:text="@string/password"
			        />
					
			</LinearLayout>
			
			<ImageView style="@style/MenuItemImage.More" />
			
		</RelativeLayout >
 
   	<!-- Seperator -->
		<LinearLayout style="@style/Seperator" />
 
	<!-- Wifi Part - Displays SSID of Network and Status -->
		<RelativeLayout  android:id="@+id/wifi_ssid_entry" 
						style="@style/Entry">
		
		    <LinearLayout
		    android:orientation="vertical" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true" >	
				
	            <TextView
	            	style="@style/Title"
			    	android:id="@+id/wifi_ssid_text"
			        android:text="@string/wifi_id"
			        />
					
	            <TextView
	            	style="@style/Summary"
			    	android:id="@+id/wifi_ssid_value"
			        android:text=""
			        />
			
			</LinearLayout>
			
			<ImageView style="@style/MenuItemImage.More" />
			
		</RelativeLayout >

   	<!-- Seperator -->
		<LinearLayout style="@style/Seperator" />
  

		
	</LinearLayout>
</ScrollView>